# Oracle-Storage

./: .gitignore  README.md  go.mod  go.sum  main.tf  oracle-storage.go  oracle_storage.go  oracle_storage_test.go
backend/: backend.go  backend_test.go
gobao/: gobao.go  lib_build.sh
gobao/lib/: obao.h
gobao/lib/obao/: Cargo.toml
gobao/lib/obao/src/: lib.rs
processing/: processing.go  processing_test.go
processing/blake3/: blake3.go  blake3_test.go
